// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders blocked progress-stepper 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-labelledby[39m=[32m"s0-stepper-heading"[39m
    [33mclass[39m=[32m"progress-stepper"[39m
  [36m>[39m
    [36m<h2[39m
      [33mclass[39m=[32m"clipped"[39m
      [33mid[39m=[32m"s0-stepper-heading"[39m
    [36m>[39m
      [0mShipment progress, shipment is blocked[0m
    [36m</h2>[39m
    [36m<div[39m
      [33mclass[39m=[32m"progress-stepper__items"[39m
      [33mrole[39m=[32m"list"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[0]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[0]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-6[0]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-stepper-confirmation-24"[39m
                [33mviewBox[39m=[32m"0 0 24 24"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 12C0 5.373 5.373 0 12 0c3.183 0 6.235 1.264 8.485 3.515A11.996 11.996 0 0124 12c0 6.627-5.373 12-12 12S0 18.627 0 12zm10.71 4.71l8-8h-.01a1 1 0 00-1.41-1.41L10 14.59 6.71 11.3a1 1 0 00-1.41 1.41l4 4a1 1 0 001.41 0z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-confirmation-icon, var(--color-background-information))"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[0]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mStarted[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 3rd[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[1]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[1]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[1]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mShipped[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 4th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33maria-current[39m=[32m"step"[39m
        [33mclass[39m=[32m"progress-stepper__item progress-stepper__item--attention"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-7[2]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-7[2]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-7[2]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-stepper-attention-24"[39m
                [33mviewBox[39m=[32m"0 0 24 24"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 12C0 5.373 5.373 0 12 0c6.625.006 11.994 5.375 12 12 0 6.627-5.373 12-12 12S0 18.627 0 12zm2 0c0 5.523 4.477 10 10 10 5.52-.006 9.994-4.48 10-10 0-5.523-4.477-10-10-10S2 6.477 2 12zm10-6a1 1 0 011 1v6a1 1 0 01-2 0V7a1 1 0 011-1zm1 11a1 1 0 11-2 0 1 1 0 012 0z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-attention-icon, var(--color-foreground-attention))"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-7[2]-0-text"[39m
            [36m>[39m
              [0mblocked[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-attention-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mBlocked[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 5th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-9[3]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-9[3]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-9[3]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mfill[39m=[32m"none"[39m
                [33mid[39m=[32m"icon-stepper-upcoming-24"[39m
                [33mviewBox[39m=[32m"0 0 24 25"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M12 2.5C6.47759 2.5 2 6.97649 2 12.5C2 18.0223 6.47775 22.5 12 22.5C17.5223 22.5 22 18.0223 22 12.5C22 6.97649 17.5224 2.5 12 2.5ZM0 12.5C0 5.87176 5.37318 0.5 12 0.5C18.6268 0.5 24 5.87176 24 12.5C24 19.1268 18.6268 24.5 12 24.5C5.37318 24.5 0 19.1268 0 12.5Z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-upcoming-icon, var(--color-stroke-default))"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-9[3]-0-text"[39m
            [36m>[39m
              [0mupcoming[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-upcoming-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mDelivered[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 6th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders default state complete progress-stepper 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-labelledby[39m=[32m"s0-stepper-heading"[39m
    [33mclass[39m=[32m"progress-stepper"[39m
  [36m>[39m
    [36m<h2[39m
      [33mclass[39m=[32m"clipped"[39m
      [33mid[39m=[32m"s0-stepper-heading"[39m
    [36m>[39m
      [0mShipment progress[0m
    [36m</h2>[39m
    [36m<div[39m
      [33mclass[39m=[32m"progress-stepper__items"[39m
      [33mrole[39m=[32m"list"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[0]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[0]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-6[0]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-stepper-confirmation-24"[39m
                [33mviewBox[39m=[32m"0 0 24 24"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 12C0 5.373 5.373 0 12 0c3.183 0 6.235 1.264 8.485 3.515A11.996 11.996 0 0124 12c0 6.627-5.373 12-12 12S0 18.627 0 12zm10.71 4.71l8-8h-.01a1 1 0 00-1.41-1.41L10 14.59 6.71 11.3a1 1 0 00-1.41 1.41l4 4a1 1 0 001.41 0z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-confirmation-icon, var(--color-background-information))"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[0]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mStarted[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 3rd[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[1]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[1]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[1]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mShipped[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 4th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[2]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[2]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[2]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mTransit[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 5th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[3]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[3]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[3]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mDelivered[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 6th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders default state progress-stepper 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-labelledby[39m=[32m"s0-stepper-heading"[39m
    [33mclass[39m=[32m"progress-stepper"[39m
  [36m>[39m
    [36m<h2[39m
      [33mclass[39m=[32m"clipped"[39m
      [33mid[39m=[32m"s0-stepper-heading"[39m
    [36m>[39m
      [0mShipment progress[0m
    [36m</h2>[39m
    [36m<div[39m
      [33mclass[39m=[32m"progress-stepper__items"[39m
      [33mrole[39m=[32m"list"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[0]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[0]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-6[0]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-stepper-confirmation-24"[39m
                [33mviewBox[39m=[32m"0 0 24 24"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 12C0 5.373 5.373 0 12 0c3.183 0 6.235 1.264 8.485 3.515A11.996 11.996 0 0124 12c0 6.627-5.373 12-12 12S0 18.627 0 12zm10.71 4.71l8-8h-.01a1 1 0 00-1.41-1.41L10 14.59 6.71 11.3a1 1 0 00-1.41 1.41l4 4a1 1 0 001.41 0z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-confirmation-icon, var(--color-background-information))"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[0]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mStarted[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 3rd[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[1]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[1]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[1]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mShipped[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 4th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33maria-current[39m=[32m"step"[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-8[2]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-8[2]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-8[2]-0-text"[39m
            [36m>[39m
              [0mcurrent[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mTransit[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 5th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-9[3]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-9[3]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-9[3]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mfill[39m=[32m"none"[39m
                [33mid[39m=[32m"icon-stepper-upcoming-24"[39m
                [33mviewBox[39m=[32m"0 0 24 25"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M12 2.5C6.47759 2.5 2 6.97649 2 12.5C2 18.0223 6.47775 22.5 12 22.5C17.5223 22.5 22 18.0223 22 12.5C22 6.97649 17.5224 2.5 12 2.5ZM0 12.5C0 5.87176 5.37318 0.5 12 0.5C18.6268 0.5 24 5.87176 24 12.5C24 19.1268 18.6268 24.5 12 24.5C5.37318 24.5 0 19.1268 0 12.5Z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-upcoming-icon, var(--color-stroke-default))"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-9[3]-0-text"[39m
            [36m>[39m
              [0mupcoming[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-upcoming-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mDelivered[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 6th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders default state upcoming progress-stepper 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-labelledby[39m=[32m"s0-stepper-heading"[39m
    [33mclass[39m=[32m"progress-stepper"[39m
  [36m>[39m
    [36m<h2[39m
      [33mclass[39m=[32m"clipped"[39m
      [33mid[39m=[32m"s0-stepper-heading"[39m
    [36m>[39m
      [0mShipment progress[0m
    [36m</h2>[39m
    [36m<div[39m
      [33mclass[39m=[32m"progress-stepper__items progress-stepper__items--upcoming"[39m
      [33mrole[39m=[32m"list"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-9[0]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-9[0]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-9[0]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mfill[39m=[32m"none"[39m
                [33mid[39m=[32m"icon-stepper-upcoming-24"[39m
                [33mviewBox[39m=[32m"0 0 24 25"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M12 2.5C6.47759 2.5 2 6.97649 2 12.5C2 18.0223 6.47775 22.5 12 22.5C17.5223 22.5 22 18.0223 22 12.5C22 6.97649 17.5224 2.5 12 2.5ZM0 12.5C0 5.87176 5.37318 0.5 12 0.5C18.6268 0.5 24 5.87176 24 12.5C24 19.1268 18.6268 24.5 12 24.5C5.37318 24.5 0 19.1268 0 12.5Z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-upcoming-icon, var(--color-stroke-default))"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-9[0]-0-text"[39m
            [36m>[39m
              [0mupcoming[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-upcoming-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mStarted[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 3rd[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-9[1]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-9[1]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-9[1]-0-text"[39m
            [36m>[39m
              [0mupcoming[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-upcoming-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mShipped[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 4th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-9[2]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-9[2]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-9[2]-0-text"[39m
            [36m>[39m
              [0mupcoming[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-upcoming-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mTransit[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 5th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-9[3]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-9[3]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-9[3]-0-text"[39m
            [36m>[39m
              [0mupcoming[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-upcoming-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mDelivered[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 6th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders default without pragraph 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-labelledby[39m=[32m"s0-stepper-heading"[39m
    [33mclass[39m=[32m"progress-stepper"[39m
  [36m>[39m
    [36m<h3[39m
      [33mclass[39m=[32m"clipped"[39m
      [33mid[39m=[32m"s0-stepper-heading"[39m
    [36m>[39m
      [0mOther[0m
    [36m</h3>[39m
    [36m<div[39m
      [33mclass[39m=[32m"progress-stepper__items"[39m
      [33mrole[39m=[32m"list"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[0]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[0]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-6[0]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-stepper-confirmation-24"[39m
                [33mviewBox[39m=[32m"0 0 24 24"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 12C0 5.373 5.373 0 12 0c3.183 0 6.235 1.264 8.485 3.515A11.996 11.996 0 0124 12c0 6.627-5.373 12-12 12S0 18.627 0 12zm10.71 4.71l8-8h-.01a1 1 0 00-1.41-1.41L10 14.59 6.71 11.3a1 1 0 00-1.41 1.41l4 4a1 1 0 001.41 0z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-confirmation-icon, var(--color-background-information))"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[0]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mStarted[0m
          [36m</h4>[39m
          [36m<span>[39m
            [0mJuly 3rd[0m
          [36m</span>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[1]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[1]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[1]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mShipped[0m
          [36m</h4>[39m
          [36m<span>[39m
            [0mJuly 4th[0m
          [36m</span>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33maria-current[39m=[32m"step"[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-8[2]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-8[2]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-8[2]-0-text"[39m
            [36m>[39m
              [0mcurrent[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mTransit[0m
          [36m</h4>[39m
          [36m<span>[39m
            [0mJuly 5th[0m
          [36m</span>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-9[3]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-9[3]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-9[3]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mfill[39m=[32m"none"[39m
                [33mid[39m=[32m"icon-stepper-upcoming-24"[39m
                [33mviewBox[39m=[32m"0 0 24 25"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M12 2.5C6.47759 2.5 2 6.97649 2 12.5C2 18.0223 6.47775 22.5 12 22.5C17.5223 22.5 22 18.0223 22 12.5C22 6.97649 17.5224 2.5 12 2.5ZM0 12.5C0 5.87176 5.37318 0.5 12 0.5C18.6268 0.5 24 5.87176 24 12.5C24 19.1268 18.6268 24.5 12 24.5C5.37318 24.5 0 19.1268 0 12.5Z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-upcoming-icon, var(--color-stroke-default))"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-9[3]-0-text"[39m
            [36m>[39m
              [0mupcoming[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-upcoming-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mDelivered[0m
          [36m</h4>[39m
          [36m<span>[39m
            [0mJuly 6th[0m
          [36m</span>[39m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders in progress progress-stepper 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-labelledby[39m=[32m"s0-stepper-heading"[39m
    [33mclass[39m=[32m"progress-stepper"[39m
  [36m>[39m
    [36m<h2[39m
      [33mclass[39m=[32m"clipped"[39m
      [33mid[39m=[32m"s0-stepper-heading"[39m
    [36m>[39m
      [0mShipment progress[0m
    [36m</h2>[39m
    [36m<div[39m
      [33mclass[39m=[32m"progress-stepper__items"[39m
      [33mrole[39m=[32m"list"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[0]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[0]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-6[0]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-stepper-confirmation-24"[39m
                [33mviewBox[39m=[32m"0 0 24 24"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 12C0 5.373 5.373 0 12 0c3.183 0 6.235 1.264 8.485 3.515A11.996 11.996 0 0124 12c0 6.627-5.373 12-12 12S0 18.627 0 12zm10.71 4.71l8-8h-.01a1 1 0 00-1.41-1.41L10 14.59 6.71 11.3a1 1 0 00-1.41 1.41l4 4a1 1 0 001.41 0z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-confirmation-icon, var(--color-background-information))"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[0]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mStarted[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 3rd[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[1]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[1]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[1]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mShipped[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 4th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33maria-current[39m=[32m"step"[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-8[2]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-8[2]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-8[2]-0-text"[39m
            [36m>[39m
              [0mcurrent[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mTransit[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 5th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-9[3]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-9[3]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-9[3]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mfill[39m=[32m"none"[39m
                [33mid[39m=[32m"icon-stepper-upcoming-24"[39m
                [33mviewBox[39m=[32m"0 0 24 25"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M12 2.5C6.47759 2.5 2 6.97649 2 12.5C2 18.0223 6.47775 22.5 12 22.5C17.5223 22.5 22 18.0223 22 12.5C22 6.97649 17.5224 2.5 12 2.5ZM0 12.5C0 5.87176 5.37318 0.5 12 0.5C18.6268 0.5 24 5.87176 24 12.5C24 19.1268 18.6268 24.5 12 24.5C5.37318 24.5 0 19.1268 0 12.5Z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-upcoming-icon, var(--color-stroke-default))"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-9[3]-0-text"[39m
            [36m>[39m
              [0mupcoming[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-upcoming-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mDelivered[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 6th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders vertical progress-stepper 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-labelledby[39m=[32m"s0-stepper-heading"[39m
    [33mclass[39m=[32m"progress-stepper"[39m
  [36m>[39m
    [36m<h2[39m
      [33mclass[39m=[32m"clipped"[39m
      [33mid[39m=[32m"s0-stepper-heading"[39m
    [36m>[39m
      [0mShipment progress[0m
    [36m</h2>[39m
    [36m<div[39m
      [33mclass[39m=[32m"progress-stepper__items"[39m
      [33mrole[39m=[32m"list"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[0]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[0]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-6[0]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-stepper-confirmation-24"[39m
                [33mviewBox[39m=[32m"0 0 24 24"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 12C0 5.373 5.373 0 12 0c3.183 0 6.235 1.264 8.485 3.515A11.996 11.996 0 0124 12c0 6.627-5.373 12-12 12S0 18.627 0 12zm10.71 4.71l8-8h-.01a1 1 0 00-1.41-1.41L10 14.59 6.71 11.3a1 1 0 00-1.41 1.41l4 4a1 1 0 001.41 0z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-confirmation-icon, var(--color-background-information))"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[0]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mStarted[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 3rd[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-6[1]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-6[1]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-6[1]-0-text"[39m
            [36m>[39m
              [0mcomplete[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mShipped[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 4th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33maria-current[39m=[32m"step"[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-8[2]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-8[2]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-8[2]-0-text"[39m
            [36m>[39m
              [0mcurrent[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-confirmation-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mTransit[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 5th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
      [36m<hr[39m
        [33mclass[39m=[32m"progress-stepper__separator"[39m
        [33mrole[39m=[32m"presentation"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"progress-stepper__item"[39m
        [33mrole[39m=[32m"listitem"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-labelledby[39m=[32m"s0-9[3]-0-text"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mdata-marko-key[39m=[32m"@svg s0-9[3]-0"[39m
            [33mfocusable[39m=[32m"false"[39m
            [33mheight[39m=[32m"24"[39m
            [33mrole[39m=[32m"img"[39m
            [33mwidth[39m=[32m"24"[39m
          [36m>[39m
            [36m<defs[39m
              [33mdata-marko-key[39m=[32m"@defs s0-9[3]-0"[39m
            [36m>[39m
              [36m<symbol[39m
                [33mfill[39m=[32m"none"[39m
                [33mid[39m=[32m"icon-stepper-upcoming-24"[39m
                [33mviewBox[39m=[32m"0 0 24 25"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M12 2.5C6.47759 2.5 2 6.97649 2 12.5C2 18.0223 6.47775 22.5 12 22.5C17.5223 22.5 22 18.0223 22 12.5C22 6.97649 17.5224 2.5 12 2.5ZM0 12.5C0 5.87176 5.37318 0.5 12 0.5C18.6268 0.5 24 5.87176 24 12.5C24 19.1268 18.6268 24.5 12 24.5C5.37318 24.5 0 19.1268 0 12.5Z"[39m
                  [33mfill[39m=[32m"var(--progress-stepper-upcoming-icon, var(--color-stroke-default))"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<title[39m
              [33mid[39m=[32m"s0-9[3]-0-text"[39m
            [36m>[39m
              [0mupcoming[0m
            [36m</title>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-stepper-upcoming-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-stepper__text"[39m
        [36m>[39m
          [36m<h4>[39m
            [0mDelivered[0m
          [36m</h4>[39m
          [36m<p>[39m
            [0mJuly 6th[0m
          [36m</p>[39m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;
